kubernetes/apps/network/media-pvr-ext/app/sabnzbd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: media-pvr-sabnzbd
spec:
  type: ExternalName
  externalName: media-pvr.home.lan
