kubernetes/apps/network/media-pvr-ext/app/sabnzbd/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
spec:
  hostnames: ["sabnzbd.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: media-pvr-ext
          port: 8100
